--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "axios": "^1.13.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
